<resources>
    <string name="app_name">Animals</string>

    <!--Home-->
    <string name="home_welcome">Welcome to my Animal Picture APP</string>

    <!--Menu-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_cats">Cats</string>
    <string name="menu_dogs">Dogs</string>
    <string name="menu_favorites">Favorites</string>

    <!--Settings-->
    <string name="settings_label">Settings</string>

    <string name="pref_animalCat">Animals</string>
    <string name="pref_cats">Cats</string>
    <string name="pref_catsSummaryOn">You will see cats !</string>
    <string name="pref_catsSummaryOff">You won\'t see cats !</string>

    <string name="pref_dogs">Dogs</string>
    <string name="pref_dogsSummaryOn">You will see dogs !</string>
    <string name="pref_dogsSummaryOff">You won\'t see dogs !</string>

    <string name="pref_foxes">Foxes</string>
    <string name="pref_foxesSummaryOn">You will see foxes !</string>
    <string name="pref_foxesSummaryOff">You won\'t see foxes !</string>

    <string name="pref_globalCat">Global</string>
    <string name="pref_nbItems">Number of each animals you want to see</string>

    <!--Adapter-->
    <string name="adapter_click">Press long to add to favorite</string>
    <string name="adapter_add">Add to favorite</string>
    <string name="adapter_remove">Remove from favorite</string>

</resources>
